syntax = "proto3";

package grpcmock.examples.v1;

option java_multiple_files = true;
option java_package = "org.grpcmock.examples.v1";
option java_outer_classname = "DownstreamServiceProto";

service DownstreamService {
  rpc GetDownstreamMessage (GetDownstreamMessageRequest) returns (GetDownstreamMessageResponse);
}

message GetDownstreamMessageRequest {
  string message = 1;
}

message GetDownstreamMessageResponse {
  string message = 1;
}